ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynode-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: xxx.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mynode-app
            port:
              number: 80
